log
Tue 18 Apr 2023 11:25:17 PM UTC: 
 tests:  1|8
total_score: 0/70
16282b1
Tue 18 Apr 2023 11:32:12 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
f613b68
Tue 18 Apr 2023 11:34:11 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
c22c1a2
Tue 18 Apr 2023 11:48:32 PM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:92:1: error: expected identifier or ‘(’ before ‘}’ token
   92 | }
      | ^
Compilation failed
6cc7470
Tue 18 Apr 2023 11:48:47 PM UTC: 
 treemap.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  0|0
343d23f
